--- a/src/app/admin/pages/company-expenses/company-expenses.component.html
+++ b/src/app/admin/pages/company-expenses/company-expenses.component.html
@@ -70,7 +70,7 @@
         <!-- Card Header - Dropdown -->
         <div class="card-header ">
             <h5 class="m-0 font-weight-bold text-primary">
-                Add Expense
+                Company Expense Detail
             </h5>
         </div>
         <!-- Card Body -->
