--- a/src/app/admin/pages/employee-payment/employee-payment.component.html
+++ b/src/app/admin/pages/employee-payment/employee-payment.component.html
@@ -78,7 +78,7 @@
         <!-- Card Header - Dropdown -->
         <div class="card-header ">
             <h5 class="m-0 font-weight-bold text-primary">
-                Add Employee Payment
+                Employee Payment Detail
             </h5>
         </div>
         <!-- Card Body -->
