--- a/src/app/admin/pages/project-payment/project-payment.component.html
+++ b/src/app/admin/pages/project-payment/project-payment.component.html
@@ -9,7 +9,7 @@
 <div class="card shadow mb-4">
     <div *ngIf="isShown">
         <div class="card-header py-3">
-            <h5 class="m-0 font-weight-bold text-primary"> Project List </h5>
+            <h5 class="m-0 font-weight-bold text-primary"> Project Payment List </h5>
         </div>
         <div class="card-body">
             <div class="row mrgn-btm-15">
@@ -80,7 +80,7 @@
 
     <div *ngIf="!isShown">
         <div class="card-header py-3">
-            <h5 class="m-0 font-weight-bold text-primary">Add Project Payment</h5>
+            <h5 class="m-0 font-weight-bold text-primary">Project Payment Detail</h5>
         </div>
         <!-- Card Body -->
         <div class="card-body">
