--- a/src/app/admin/pages/employee-project/employee-project.component.html
+++ b/src/app/admin/pages/employee-project/employee-project.component.html
@@ -57,7 +57,7 @@
 
     <div *ngIf="!isShown">
         <div class="card-header py-3">
-            <h5 class="m-0 font-weight-bold text-primary">Add Employee Project </h5>
+            <h5 class="m-0 font-weight-bold text-primary">Employee Project Detail</h5>
         </div>
         <!-- Card Body -->
         <div class="card-body">
