--- a/src/app/admin/pages/employee/employee.component.html
+++ b/src/app/admin/pages/employee/employee.component.html
@@ -68,7 +68,7 @@
     <div *ngIf="!isShown">
         <!-- Card Header - Dropdown -->
         <div class="card-header ">
-            <h5 class="m-0 font-weight-bold text-primary">Add Employee</h5>
+            <h5 class="m-0 font-weight-bold text-primary">Employee Detail</h5>
         </div>
         <!-- Card Body -->
         <div class="card-body">
