--- a/src/app/admin/pages/generate-invoice/generate-invoice.component.html
+++ b/src/app/admin/pages/generate-invoice/generate-invoice.component.html
@@ -66,7 +66,7 @@
 <div class="card shadow mb-4">
     <div *ngIf="!isShown">
         <div class="card-header py-3">
-            <h5 class="m-0 font-weight-bold text-primary">Generate Invoice </h5>
+            <h5 class="m-0 font-weight-bold text-primary">Invoice Detail</h5>
         </div>
         <div class="card-body">
             <div class="row">
