--- a/src/app/admin/pages/project/project.component.html
+++ b/src/app/admin/pages/project/project.component.html
@@ -71,7 +71,7 @@
 
     <div *ngIf="!isShown">
         <div class="card-header py-3">
-            <h5 class="m-0 font-weight-bold text-primary">Add Project </h5>
+            <h5 class="m-0 font-weight-bold text-primary">Project Detail</h5>
         </div>
         <!-- Card Body -->
         <div class="card-body">
