--- a/src/app/admin/pages/profile/profile.component.html
+++ b/src/app/admin/pages/profile/profile.component.html
@@ -9,13 +9,14 @@
                 <div class="form-group col-lg-6">
                     <label for="firstName"> First Name* </label>
                     <input type="text" class="form-control" formControlName="firstName" placeholder="First Name"
-                        autocomplete="off" maxlength="20">
+                        autocomplete="off" maxlength="20" [ngClass]="{ 'is-invalid': submitted && f['firstName'].errors }">
+                      
                 </div>
 
                 <div class="form-group col-lg-6">
                     <label for="lastName">Last Name* </label>
                     <input type="text" class="form-control" formControlName="lastName" placeholder="Last Name"
-                        autocomplete="off" maxlength="20">
+                        autocomplete="off" maxlength="20" [ngClass]="{ 'is-invalid': submitted && f['lastName'].errors }">
                 </div>
             </div>
 
@@ -23,23 +24,25 @@
                 <div class="form-group col-lg-6">
                     <label for="emailAddress">Email Address* </label>
                     <input type="text" class="form-control" formControlName="emailAddress" placeholder="Email Address"
-                        maxlength="20" autocomplete="off">
+                        maxlength="20" autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f['emailAddress'].errors }">
                 </div>
 
                 <div class="form-group col-lg-6">
                     <label for="mobileNumber">Mobile Number </label>
                     <input type="text" class="form-control" formControlName="mobile" placeholder="(XXX) XXX XXXX"
-                        autocomplete="off" mask="(000) 000 0000">
+                        autocomplete="off" mask="(000) 000 0000" [ngClass]="{ 'is-invalid': submitted && f['mobile'].errors }">
                 </div>
             </div>
 
             <div class="row">
                 <div class="form-group col-lg-6">
                     <label for="gender">Gender</label>
-                    <select name="gender" class="form-select col-lg-12" formControlName="gender">
+                    <select name="gender" class="form-select col-lg-12" formControlName="gender" 
+                    [ngClass]="{'is-invalid': submitted && f['gender'].errors }" >
                         <option value="0">--Select Gender--</option>
                         <option *ngFor="let gender of genders" [value]="gender.id">{{gender.name}}</option>
                     </select>
+                   
                 </div>
 
                 <div class="form-group col-lg-6">
