--- a/src/app/admin/pages/employee-project/employee-project.component.html
+++ b/src/app/admin/pages/employee-project/employee-project.component.html
@@ -65,7 +65,9 @@
                 <div class="row">
                     <div class="form-group col-lg-6">
                         <label for="employee">Employee</label>
-                        <select name="employee" class="form-select col-lg-12"formControlName="employeeId" >
+                        <span class="red">*</span>
+                        <select name="employee" class="form-select col-lg-12"formControlName="employeeId"
+                        [ngClass]="{ 'is-invalid': submitted && f['employeeId'].errors }" >
                             <option value="0">-- Select Employee --</option>
                             <option *ngFor="let employee of employeesList" [value]="employee.employeeId">{{ employee.firstName }} {{ employee.lastName }}
                             </option>
@@ -76,7 +78,9 @@
                 <div class="row">
                     <div class="form-group col-lg-6">
                         <label for="project">Project</label>
-                        <select name="project" class="form-select col-lg-12" formControlName="projectId">
+                        <span class="red">*</span>
+                        <select name="project" class="form-select col-lg-12" formControlName="projectId"
+                        [ngClass]="{ 'is-invalid': submitted && f['projectId'].errors }">
                             <option value="0">-- Select Project --</option>
                             <option *ngFor="let project of projectsList" [value]="project.projectId">{{ project.name }}
                             </option>
