--- a/src/app/admin/pages/employee/employee.component.html
+++ b/src/app/admin/pages/employee/employee.component.html
@@ -75,9 +75,11 @@
             <form class="form-horizontal" [formGroup]="employeeForm" (ngSubmit)="saveEmployee()">
                 <div class="row">
                     <div class="form-group col-lg-4">
-                        <label for="firstName">First Name*</label>
+                        <label for="firstName">First Name</label>
+                        <span class="red">*</span>
                         <input class="form-control" type="text" id="firstName" placeholder="First Name"
-                            autocomplete="off" maxlength="100" formControlName="firstName">
+                            autocomplete="off" maxlength="100" formControlName="firstName"
+                             [ngClass]="{ 'is-invalid': submitted && f['firstName'].errors }">
                     </div>
 
                     <div class="form-group col-lg-4">
@@ -86,15 +88,18 @@
                             autocomplete="off" maxlength="100" formControlName="middleName">
                     </div>
                     <div class="form-group col-lg-4">
-                        <label for="lastNname">Last Name*</label>
+                        <label for="lastNname">Last Name</label>
+                        <span class="red">*</span>
                         <input class="form-control" type="text" id="lastName" placeholder="Last Name" autocomplete="off"
-                            maxlength="100" formControlName="lastName">
+                            maxlength="100" formControlName="lastName" 
+                             [ngClass]="{ 'is-invalid': submitted && f['lastName'].errors }">
                     </div>
                 </div>
                 <div class="row">
                     <div class="form-group col-lg-4">
                         <label for="gender">Gender</label>
-                        <select name="gender" class="form-select col-lg-12" formControlName="gender">
+                        <span class="red">*</span>
+                        <select name="gender" class="form-select col-lg-12" formControlName="gender" [ngClass]="{ 'is-invalid': submitted && f['gender'].errors }">
                             <option value="0">--Select Gender--</option>
                             <option *ngFor="let gender of genders" [value]="gender.id">{{gender.name}}</option>
                         </select>
@@ -114,7 +119,9 @@
                     </div>
                     <div class="form-group col-lg-4">
                         <label for="description">Designation</label>
-                        <select name="description" class="form-select col-lg-12" formControlName="designationId">
+                        <span class="red">*</span>
+                        <select name="description" class="form-select col-lg-12" formControlName="designationId"
+                         [ngClass]="{ 'is-invalid': submitted && f['designationId'].errors }">
                             <option value="0">-- Select Designation --</option>
                             <option *ngFor="let designation of designations" [value]="designation.id">
                                 {{designation.name}}</option>
@@ -123,12 +130,12 @@
                 </div>
                 <div class="row">
                     <div class="form-group col-lg-6">
-                        <label for="emailAddress">Email Address*</label>
+                        <label for="emailAddress">Email Address</label>
                         <input class="form-control" type="text" id="emailAddress" placeholder="Email Address"
                             autocomplete="off" maxlength="100" formControlName="emailAddress">
                     </div>
                     <div class="form-group col-lg-6">
-                        <label for="mobile">Mobile*</label>
+                        <label for="mobile">Mobile</label>
                         <input class="form-control" type="text" id="mobile" placeholder="(XXX) XXX XXXX"
                             mask="(000) 000 0000" autocomplete="off" formControlName="mobile">
                     </div>
@@ -189,7 +196,9 @@
                     </div>
                     <div class="form-group col-lg-4">
                         <label for="status">Status </label>
-                        <select name="status" class="form-select col-lg-12" formControlName="statusId">
+                        <span class="red">*</span>
+                        <select name="status" class="form-select col-lg-12" formControlName="statusId"
+                        [ngClass]="{ 'is-invalid': submitted && f['statusId'].errors }" >
                             <option value="0">-- Select Status --</option>
                             <option *ngFor="let status of status" [value]="status.id">{{status.name}}
                             </option>
