--- a/src/app/admin/pages/generate-invoice/generate-invoice.component.html
+++ b/src/app/admin/pages/generate-invoice/generate-invoice.component.html
@@ -22,7 +22,7 @@
 
             <div class="row">
                 <div class="col-lg-12">
-                    <table datatable [dtOptions]="dtOptions" class="row-border hover">
+                    <table class="table table-stripped">
                         <thead>
                             <tr>
                                 <th scope="col">Title</th>
@@ -48,7 +48,8 @@
                                     <a href="javascript:void(0)" ngbTooltip="Download">
                                         <fa-icon [icon]="faDownload"></fa-icon>
                                     </a>
-                                    <a href="javascript:void(0)" ngbTooltip="Delete">
+                                    <a href="javascript:void(0)" ngbTooltip="Delete"
+                                        (click)="deleteGenerateInvoice(generateInvoice)">
                                         <fa-icon [icon]="faDelete"></fa-icon>
                                     </a>
                                     <a href="javascript:void(0)" ngbTooltip="View">
@@ -69,155 +70,158 @@
             <h5 class="m-0 font-weight-bold text-primary">Generate Invoice </h5>
         </div>
         <div class="card-body">
-            <div class="row">
-                <div class="col-lg-4">
-                    <label for="lastNname">Title*</label>
-                    <input class="form-control" type="text" id="title" placeholder="Title" autocomplete="off"
-                        maxlength="100">
+            <form class="form-horizontal" [formGroup]="invoiceForm" (ngSubmit)="saveGenerateInvoice()">
+                <div class="row">
+                    <div class="form-group col-lg-4">
+                        <label for="title">Title*</label>
+                        <input class="form-control" type="text" id="title" placeholder="Title" autocomplete="off"
+                            maxlength="100" formControlName="title"
+                            [ngClass]="{ 'is-invalid': submitted && f['title'].errors }">
+                    </div>
                 </div>
-            </div>
-            <div class="row mrgn-btm-15">
-                <div class="col-lg-10">
+                <div class="row mrgn-btm-15">
+                    <div class="col-lg-10">
+                    </div>
+
+                    <div class="col-lg-2 algn-right">
+                        <input type="button" class="btn btn-success" value="Preview" />
+                    </div>
                 </div>
 
-                <div class="col-lg-2 algn-right">
-                    <input type="button" class="btn btn-success" value="Preview" />
+                <div class="row">
+                    <div class="col-lg-12 card shadow">
+                        <table style="margin-bottom: 15px;">
+                            <tr>
+                                <td>
+                                    TechMatys
+                                </td>
+                                <td style="text-align: right;">
+                                    hello@techmatys.com <br>
+                                    Dehradun, India
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2" style="text-align: center;">
+                                    BILLING INVOICE
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                </td>
+                                <td style="width: 10%;">
+                                    <span>Date </span>
+                                    <input class="form-control" type="text" id="title" placeholder="Title"
+                                        autocomplete="off" maxlength="100" style="width: 150px;">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+
+                                </td>
+                                <td style="width: 10%;">
+                                    <span>Invoice # </span>
+                                    <input class="form-control" type="text" id="title" placeholder="Title"
+                                        autocomplete="off" maxlength="100" style="width: 150px;">
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>
+                                </td>
+                                <td style="width: 10%;">
+                                    <input type="button" class="btn btn-success" value="Add new Item" />
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td colspan="2">
+                                    <table class="table">
+                                        <thead>
+                                            <tr>
+                                                <th>
+                                                    Description
+                                                </th>
+                                                <th>
+                                                    Qty
+                                                </th>
+                                                <th>
+                                                    Unit Price
+                                                </th>
+                                                <th>
+                                                    Amount
+                                                </th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>
+                                                    <input class="form-control" type="text" id="title"
+                                                        placeholder="Title" autocomplete="off" maxlength="100">
+                                                </td>
+                                                <td>
+                                                    <input class="form-control" type="text" id="title"
+                                                        placeholder="Title" autocomplete="off" maxlength="100">
+
+                                                </td>
+                                                <td>
+                                                    <input class="form-control" type="text" id="title"
+                                                        placeholder="Title" autocomplete="off" maxlength="100">
+
+                                                </td>
+                                                <td>
+                                                    <label>
+                                                        10000
+                                                    </label>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td style="width: 50%;">
+                                    <span>Bill To</span>
+                                    <input class="form-control" type="text" id="title" placeholder="Title"
+                                        autocomplete="off" maxlength="100" width="150px">
+                                </td>
+                                <td>
+                                    <span>SUBTOTAL</span>
+                                    <input class="form-control" type="text" id="title" placeholder="Title"
+                                        autocomplete="off" maxlength="100" width="150px">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+
+                                </td>
+                                <td style="width: 10%;">
+                                    <span>Tax </span>
+                                    <input class="form-control" type="text" id="title" placeholder="Title"
+                                        autocomplete="off" maxlength="100" style="width: 150px;">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+
+                                </td>
+                                <td style="width: 10%;">
+                                    <span>Total </span>
+                                    <input class="form-control" type="text" id="title" placeholder="Title"
+                                        autocomplete="off" maxlength="100" style="width: 150px;">
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
-            </div>
 
-            <div class="row">
-                <div class="col-lg-12 card shadow">
-                    <table style="margin-bottom: 15px;">
-                        <tr>
-                            <td>
-                                TechMatys
-                            </td>
-                            <td style="text-align: right;">
-                                hello@techmatys.com <br>
-                                Dehradun, India
-                            </td>
-                        </tr>
-                        <tr>
-                            <td colspan="2" style="text-align: center;">
-                                BILLING INVOICE
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                            </td>
-                            <td style="width: 10%;">
-                                <span>Date </span>
-                                <input class="form-control" type="text" id="title" placeholder="Title"
-                                    autocomplete="off" maxlength="100" style="width: 150px;">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-
-                            </td>
-                            <td style="width: 10%;">
-                                <span>Invoice # </span>
-                                <input class="form-control" type="text" id="title" placeholder="Title"
-                                    autocomplete="off" maxlength="100" style="width: 150px;">
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td>
-                            </td>
-                            <td style="width: 10%;">
-                                <input type="button" class="btn btn-success" value="Add new Item" />
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td colspan="2">
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th>
-                                                Description
-                                            </th>
-                                            <th>
-                                                Qty
-                                            </th>
-                                            <th>
-                                                Unit Price
-                                            </th>
-                                            <th>
-                                                Amount
-                                            </th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>
-                                                <input class="form-control" type="text" id="title" placeholder="Title"
-                                                    autocomplete="off" maxlength="100">
-                                            </td>
-                                            <td>
-                                                <input class="form-control" type="text" id="title" placeholder="Title"
-                                                    autocomplete="off" maxlength="100">
-
-                                            </td>
-                                            <td>
-                                                <input class="form-control" type="text" id="title" placeholder="Title"
-                                                    autocomplete="off" maxlength="100">
-
-                                            </td>
-                                            <td>
-                                                <label>
-                                                    10000
-                                                </label>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td style="width: 50%;">
-                                <span>Bill To</span>
-                                <input class="form-control" type="text" id="title" placeholder="Title"
-                                    autocomplete="off" maxlength="100" width="150px">
-                            </td>
-                            <td>
-                                <span>SUBTOTAL</span>
-                                <input class="form-control" type="text" id="title" placeholder="Title"
-                                    autocomplete="off" maxlength="100" width="150px">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-
-                            </td>
-                            <td style="width: 10%;">
-                                <span>Tax </span>
-                                <input class="form-control" type="text" id="title" placeholder="Title"
-                                    autocomplete="off" maxlength="100" style="width: 150px;">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-
-                            </td>
-                            <td style="width: 10%;">
-                                <span>Total </span>
-                                <input class="form-control" type="text" id="title" placeholder="Title"
-                                    autocomplete="off" maxlength="100" style="width: 150px;">
-                            </td>
-                        </tr>
-                    </table>
+                <div class="row submit-buttons mrgn-top-15">
+                    <div class="form-group col-lg-12">
+                        <input type="submit" class="btn btn-success" value="Save" />
+                        <input type="button" class="btn btn-outline-primary" value="Cancel" (click)="isShown = true" />
+                    </div>
                 </div>
-            </div>
-
-            <div class="row submit-buttons mrgn-top-15">
-                <div class="form-group col-lg-12">
-                    <input type="submit" class="btn btn-success" value="Save" />
-                    <input type="button" class="btn btn-outline-primary" value="Cancel" (click)="isShown = true" />
-                </div>
-            </div>
+            </form>
         </div>
     </div>
 </div>
