--- a/src/app/shared/side-nav/side-nav.component.html
+++ b/src/app/shared/side-nav/side-nav.component.html
@@ -94,8 +94,8 @@
                 <a class="collapse-item" href="javascript:void(0)" routerLink="CompanyExpenses">
                     Company Expenses
                 </a>
-                <a class="collapse-item" href="javascript:void(0)" routerLink="GenerateInvoice">
-                    Generate Invoice
+                <a class="collapse-item" href="javascript:void(0)" routerLink="CompanyInvoice">
+                    Company Invoice
                 </a>
             </div>
         </div>
