--- a/src/app/admin/pages/employee-payment/employee-payment.component.html
+++ b/src/app/admin/pages/employee-payment/employee-payment.component.html
@@ -42,7 +42,7 @@
                             <tr>
                                 <th scope="col">Employee Name</th>
                                 <th scope="col">Amount</th>
-                                <th scope="col">Month/Year</th>
+                                <th scope="col">Payment Month</th>
                                 <th scope="col">Payment Date</th>
                                 <th class="action-button">Action</th>
                             </tr>
