--- a/src/app/admin/pages/project-payment/project-payment.component.html
+++ b/src/app/admin/pages/project-payment/project-payment.component.html
@@ -38,7 +38,7 @@
                             <tr>
                                 <th scope="col">Project Name</th>
                                 <th scope="col">Received Amount</th>
-                                <th scope="col">Month/Year</th>
+                                <th scope="col">Payment Month</th>
                                 <th scope="col">Payment Date</th>
                                 <th class="action-button">Action</th>
                             </tr>
