PMS-115_Application-fixes:- minor changes in application

--- a/src/app/admin/pages/project-payment/project-payment.component.html
+++ b/src/app/admin/pages/project-payment/project-payment.component.html
@@ -107,7 +107,7 @@
                                     <div class="input-group-text">₹</div>
                                 </div>
                                 <input type="text" class="form-control" id="receivedAmount" placeholder="XXXXXXX"
-                                    autocomplete="off" mask="0000000" formControlName="receivedAmount"  
+                                    autocomplete="off" mask="999999" formControlName="receivedAmount"  
                                      [ngClass]="{ 'is-invalid': submitted && f['receivedAmount'].errors }">
                             </div>
                         </div>
@@ -121,7 +121,7 @@
                                     <div class="input-group-text">₹</div>
                                 </div>
                                 <input type="text" class="form-control" id="balancedAmount" placeholder="XXXXXXX"
-                                    autocomplete="off" mask="0000000" formControlName="balancedAmount" >
+                                    autocomplete="off" mask="999999" formControlName="balancedAmount" >
                             </div>
                         </div>
                     </div>
