--- a/src/app/admin/pages/company-expenses/company-expenses.component.html
+++ b/src/app/admin/pages/company-expenses/company-expenses.component.html
@@ -96,7 +96,7 @@
                                     <div class="input-group-text">₹</div>
                                 </div>
                                 <input type="text" class="form-control" id="amount" placeholder="XXXXXXX"
-                                    autocomplete="off" mask="999999" formControlName="amount" 
+                                    autocomplete="off" mask="9999999" formControlName="amount" 
                                     [ngClass]="{ 'is-invalid': submitted && f['amount'].errors }">
                             </div>
                         </div>
