--- a/src/app/admin/pages/employee-payment/employee-payment.component.html
+++ b/src/app/admin/pages/employee-payment/employee-payment.component.html
@@ -34,7 +34,6 @@
                     </button>
                 </div>
             </div>
-            <hr>
             <div class="row">
                 <div class="col-lg-12">
                     <table class="table table-stripped">
@@ -106,7 +105,7 @@
                                     <div class="input-group-text">₹</div>
                                 </div>
                                 <input type="text" class="form-control" id="amount" placeholder="XXXXXXX"
-                                    autocomplete="off" mask="999999" formControlName="amount" 
+                                    autocomplete="off" mask="9999999" formControlName="amount" 
                                     [ngClass]="{ 'is-invalid': submitted && f['amount'].errors }" >
                             </div>
                         </div>
