--- a/src/app/admin/pages/project-payment/project-payment.component.html
+++ b/src/app/admin/pages/project-payment/project-payment.component.html
@@ -52,7 +52,7 @@
                                     {{projectPayment.receivedAmount || 'N/A'}}
                                 </td>
                                 <td>
-                                    {{projectPayment.month || 'N/A'}}
+                                    {{projectPayment.paymentMonthYear || 'N/A'}}
                                 </td>
                                 <td>
                                     {{projectPayment.paymentDate}}
