--- a/src/app/admin/pages/employee/employee.component.html
+++ b/src/app/admin/pages/employee/employee.component.html
@@ -131,8 +131,10 @@
                 <div class="row">
                     <div class="form-group col-lg-6">
                         <label for="emailAddress">Email Address</label>
+                        <span class="red">*</span>
                         <input class="form-control" type="text" id="emailAddress" placeholder="Email Address"
-                            autocomplete="off" maxlength="100" formControlName="emailAddress">
+                            autocomplete="off" maxlength="100" formControlName="emailAddress"
+                            [ngClass]="{ 'is-invalid': submitted && f['emailAddress'].errors }">
                     </div>
                     <div class="form-group col-lg-6">
                         <label for="mobile">Mobile</label>
