--- a/src/app/admin/pages/company-invoice/company-invoice.component.html
+++ b/src/app/admin/pages/company-invoice/company-invoice.component.html
@@ -41,7 +41,7 @@
 
                                 </td>
                                 <td>
-                                    {{companyInvoice.generatedDate}}
+                                    {{companyInvoice.generatedDate| date: 'dd/MM/yyyy'}}
                                 </td>
 
                                 <td class="action-button">
