--- a/src/app/admin/pages/employee-project/employee-project.component.html
+++ b/src/app/admin/pages/employee-project/employee-project.component.html
@@ -33,7 +33,7 @@
                             <tr *ngFor=" let employeeProject of employeeProjectList">
                                 <td>{{employeeProject.employeeName || 'N/A'}} </td>
                                 <td>{{employeeProject.projectName || 'N/A'}}</td>
-                                <td>{{ employeeProject.assignedDate || 'N/A'}} </td>
+                                <td>{{ employeeProject.assignedDate | date: 'dd/MM/yyyy'|| 'N/A'}} </td>
                                 <td class="action-button">
                                     <a href="javascript:void(0)" ngbTooltip="Edit" (click)="editEmployeeProject(employeeProject)">
                                         <fa-icon [icon]="faEdit"></fa-icon>
