--- a/src/app/admin/pages/employee/employee.component.html
+++ b/src/app/admin/pages/employee/employee.component.html
@@ -108,7 +108,7 @@
                         <label for="dob">Date of Birth</label>
                         <div class="input-group">
                             <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker
-                                [maxDate]="today" formControlName="dateOfBirth" #dob="bsDatepicker" readonly
+                                [maxDate]="maxDate" formControlName="dateOfBirth" #dob="bsDatepicker" readonly
                                 [bsConfig]="{dateInputFormat: 'DD/MM/YYYY', showWeekNumbers:false,  containerClass: 'theme-dark-blue'}">
                             <div class="input-group-append">
                                 <button class="btn btn-primary" type="button" (click)="dob.toggle()">
