--- a/src/app/admin/pages/profile/profile.component.html
+++ b/src/app/admin/pages/profile/profile.component.html
@@ -53,7 +53,7 @@
                 <div class="form-group col-lg-6">
                     <label for="dob">Date of Birth</label>
                     <div class="input-group">
-                        <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker [maxDate]="today"
+                        <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker [maxDate]="maxDate"
                             formControlName="dateOfBirth" #dob="bsDatepicker" readonly
                             [bsConfig]="{dateInputFormat: 'DD/MM/YYYY', showWeekNumbers:false,  containerClass: 'theme-dark-blue'}">
                         <div class="input-group-append">
