--- a/src/app/admin/pages/company-expenses/company-expenses.component.html
+++ b/src/app/admin/pages/company-expenses/company-expenses.component.html
@@ -34,6 +34,7 @@
                     <table class="table table-stripped">
                         <thead>
                             <tr>
+                                <th scope="col">#</th>
                                 <th scope="col">Expense Name</th>
                                 <th scope="col">Amount</th>
                                 <th scope="col">Expense Date</th>
@@ -41,9 +42,10 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let expense of expenseList">
+                            <tr *ngFor="let expense of expenseList; let i = index">
+                                <td>{{i+1}}</td>
                                 <td>{{expense.title || 'N/A'}}</td>
-                                <td>{{expense.amount || 'N/A'}}</td>
+                                <td>{{expense.amount | currency:'INR'}}</td>
                                 <td>{{expense.expenseDate| date: 'dd/MM/yyyy' || 'N/A'}}</td>
                                 <td class="action-button">
                                     <a href="javascript:void(0)" ngbTooltip="Edit" (click)="editExpense(expense)">
@@ -54,8 +56,13 @@
                                     </a>
                                 </td>
                             </tr>
+                            <!-- <tr>
+                                <td colspan="5">
+                                    <span>Total - </span>
+                                </td>
+                            </tr> -->
                             <tr *ngIf="!expenseList.length">
-                                <td colspan="4">
+                                <td colspan="5">
                                     No Records Found
                                 </td>
                             </tr>
